# Calculator

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.c
src/context/: calculation_context.c  calculation_context.h
src/parser/: parser.c  parser.h
src/token/: token.c  token.h
